Add background music

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Levels/MainLevel.MainLevel
 EditorStartupMap=/Game/Levels/MainLevel.MainLevel
 GlobalDefaultGameMode=/Game/MainGameMode.MainGameMode_C
+GameInstanceClass=/Game/Audio/BackgroundMusic.BackgroundMusic_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
