--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/MainLevel.MainLevel
-EditorStartupMap=/Game/Levels/MainLevel.MainLevel
+GameDefaultMap=/Game/Levels/CityLevel.CityLevel
+EditorStartupMap=/Game/Levels/CityLevel.CityLevel
 GlobalDefaultGameMode=/Game/MainGameMode.MainGameMode_C
 GameInstanceClass=/Game/Audio/BackgroundMusic.BackgroundMusic_C
 
@@ -88,7 +88,7 @@ r.PathTracing=True
 r.GenerateMeshDistanceFields=True
 r.DistanceFields.DefaultVoxelDensity=0.200000
 r.Nanite.ProjectEnabled=True
-r.AllowStaticLighting=True
+r.AllowStaticLighting=False
 r.NormalMapsForStaticLighting=False
 r.ForwardShading=True
 r.VertexFoggingForOpaque=True
@@ -102,7 +102,7 @@ r.CustomDepthTemporalAAJitter=True
 r.PostProcessing.PropagateAlpha=0
 r.DefaultFeature.Bloom=True
 r.DefaultFeature.AmbientOcclusion=True
-r.DefaultFeature.AmbientOcclusionStaticFraction=True
+r.DefaultFeature.AmbientOcclusionStaticFraction=False
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Method=0
 r.DefaultFeature.AutoExposure.Bias=1.000000
